theme.css
/* ... */
/* #endregion */
/* #region   Community Plugin: Dataview */
body.theme-setting-overrideDataview {
  /* Styled to match embeds */
  .block-language-dataview {
    background-color: var(--embed-background);
    border-bottom: var(--embed-border-bottom);
    border-left: var(--embed-border-left);
    border-radius: 0.5rem;
    border-right: var(--embed-border-right);
    border-top: var(--embed-border-top);
    margin: 0;
  }
  @media (hover: hover) {
    /* Undo hover effect styles from app. There doesn't seem to be any clickable behaviour. */
    .markdown-source-view.mod-cm6 .cm-embed-block:not(.cm-table-widget):hover {
      box-shadow: none;
      border-radius: inherit;
      cursor: inherit;
      overflow: visible;
    }
  }

  /* List query */
  .dataview.list-view-ul {
    padding: 1em 1em 1em 2em;
  }

  /* Table query */
  .block-language-dataview:has(
      .dataview.table-view-table .dataview.table-view-table
    ) {
    border-radius: 0;
  }
  .dataview.table-view-table {
    border-collapse: separate;
    border-spacing: 0;
  }
  .dataview.table-view-table th {
    font-size: var(--table-header-size);
    font-weight: var(--table-header-weight);
    color: var(--table-header-color);
    font-family: var(--table-header-font);
    text-align: start;
    line-height: var(--line-height-tight);
  }
  .dataview.table-view-table thead th:first-of-type {
    border-top-left-radius: 0.5rem;
  }
  .dataview.table-view-table thead th:last-of-type {
    border-top-right-radius: 0.5rem;
    /* Make room for edit-block button */
    padding-right: 2.5rem;
  }
  .dataview.table-view-table tbody tr:last-of-type td:first-of-type {
    border-bottom-left-radius: 0.5rem;
  }
  .dataview.table-view-table tbody tr:last-of-type td:last-of-type {
    border-bottom-right-radius: 0.5rem;
  }
  .dataview.table-view-table tbody td,
  .dataview.table-view-table tbody th {
    border-top: none;
    border-left: none;
  }
  .dataview.table-view-table tbody td:first-child,
  .dataview.table-view-table tbody th:first-child {
    border-left: solid var(--table-header-border-width)
      var(--table-header-border-color);
  }
  .dataview.table-view-table th,
  .dataview.table-view-table td {
    border: solid var(--table-header-border-width)
      var(--table-header-border-color);
  }

  /* Table query with card layout (idea borrowed from Minimal) */
  /* TODO: use (but rename) these variables borrowed from Minimal*/
  /* TODO: mobile size for grid */
  --cards-mobile-width: 120px;
  --cards-image-height: 400px;
  --cards-image-fit: contain;
  --cards-aspect-ratio: auto;

  .cards .block-language-dataview:has(.dataview.table-view-table) {
    background: var(--theme-gradient-cardSet);
  }
  .cards table.dataview {
    --table-width: 100%;
    --table-edge-cell-padding-first: 0;
    --table-edge-cell-padding-last: 0;
    --table-cell-padding: 0;
    line-height: 1.3;
    --table-min-width: none;
    margin: 0;
  }
  .cards table.dataview thead {
    user-select: none;
    width: 180px;
    display: block;
    /* TODO: review appearance of thead – Minmal makes it a popup that presumably works with Sortable */
    display: none;
    float: right;
    position: relative;
    text-align: right;
    height: 24px;
    padding-bottom: 0;
  }
  .cards table.dataview tbody {
    clear: both;
    padding: 1.5em;
    display: grid;
    grid-template-columns: var(--theme-grid-cardSet);
    grid-column-gap: 1em;
    grid-row-gap: 1em;
  }
  .cards table.dataview > tbody > tr {
    background-color: var(--theme-color-cardBg);
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    overflow: hidden;
    transition: box-shadow 0.15s linear;
    max-width: var(--theme-length-cardMaxWidth);
    height: auto;
    border-radius: var(--radius-m);
    border: none;
    box-shadow: var(--shadow-s);
  }
  .cards table.dataview.table-view-table > tbody > tr > td,
  .cards
    table.dataview.table-view-table
    > tbody
    > tr:last-of-type
    > td:first-of-type,
  .cards
    table.dataview.table-view-table
    > tbody
    > tr:last-of-type
    > td:last-of-type {
    border: none;
    padding: 0;
    border-radius: 0;
    padding: 0.5em 0.75em 0.5em 0.75em;
  }

  /* Task query */
  .dataview-container:has(.contains-task-list) {
    padding: 1em;
  }
  .dataview-container .contains-task-list {
    padding-inline-start: 0;
  }
  @media (hover: hover) {
    /* Style as a link */
    .dataview.task-list-item:hover,
    .dataview.task-list-basic-item:hover {
      box-shadow: none;
      background-color: transparent;
      cursor: var(--cursor-link);
      text-decoration-line: var(--link-decoration);
      color: var(--link-color);
    }
  }

  /* Calendar query */
  /* Most styles shared with Calendar plugin */
  .block-language-dataview:has(.calendar) {
    padding: 1em;
  }

  /* Empty and error queries */
  & div.dataview-error-box,
  .dataview.dataview-error {
    align-items: center;
    border: 0.25rem dashed var(--background-secondary);
    display: flex;
    justify-content: center;
    min-height: 5em;
    width: 100%;
    background-color: transparent;
  }
  .dataview-error-message,
  .dataview-error {
    color: var(--text-muted);
    text-align: center;
    font-family: var(--font-text);
  }
}
/* ... */

